cmake_minimum_required(VERSION 3.20)
project(cppinterview)
add_executable(junior_4 Codes/junior/code_4.cpp)
set_target_properties(junior_4 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_9 Codes/junior/code_9.cpp)
set_target_properties(junior_9 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_10 Codes/junior/jcode_10.cpp)
set_target_properties(junior_10 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_11 Codes/junior/jcode_11.cpp)
set_target_properties(junior_11 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_14_1 Codes/junior/jcode_14_1.cpp)
set_target_properties(junior_14_1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_14_2 Codes/junior/jcode_14_2.cpp)
set_target_properties(junior_14_2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_15 Codes/junior/jcode_15.cpp)
set_target_properties(junior_15 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_22 Codes/junior/jcode_22.cpp)
set_target_properties(junior_22 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_23_1 Codes/junior/jcode_23_1.cpp)
set_target_properties(junior_23_1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_23_2 Codes/junior/jcode_23_2.cpp)
set_target_properties(junior_23_2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )