cmake_minimum_required(VERSION 3.22)
project(cppinterview)
add_executable(junior_4 Codes/junior/code_4.cpp)
set_target_properties(junior_4 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_9 Codes/junior/code_9.cpp)
set_target_properties(junior_9 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_10 Codes/junior/jcode_10.cpp)
set_target_properties(junior_10 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_11 Codes/junior/jcode_11.cpp)
set_target_properties(junior_11 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_14_1 Codes/junior/jcode_14_1.cpp)
set_target_properties(junior_14_1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_14_2 Codes/junior/jcode_14_2.cpp)
set_target_properties(junior_14_2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_15 Codes/junior/jcode_15.cpp)
set_target_properties(junior_15 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_22 Codes/junior/jcode_22.cpp)
set_target_properties(junior_22 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_23_1 Codes/junior/jcode_23_1.cpp)
set_target_properties(junior_23_1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_23_2 Codes/junior/jcode_23_2.cpp)
set_target_properties(junior_23_2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_33 Codes/junior/jcode_33.cpp)
set_target_properties(junior_33 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_37 Codes/junior/jcode_37.cpp)
set_target_properties(junior_37 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_63 Codes/junior/jcode_63.cpp)
set_target_properties(junior_63 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_65 Codes/junior/jcode_65.cpp)
set_target_properties(junior_65 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_66 Codes/junior/jcode_66.cpp)
set_target_properties(junior_66 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_67 Codes/junior/jcode_67.cpp)
set_target_properties(junior_67 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_68 Codes/junior/jcode_68.cpp)
set_target_properties(junior_68 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(junior_69 Codes/junior/jcode_69.cpp)
set_target_properties(junior_69 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)

add_executable(junior_83 Codes/junior/jcode_83.cpp)
set_target_properties(junior_83 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)

add_executable(junior_88 Codes/junior/jcode_88.cpp)
set_target_properties(junior_88 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)

add_executable(junior_187 Codes/junior/jcode_187.cpp)
set_target_properties(junior_187 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)
add_executable(test test.cpp)
set_target_properties(test PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)


add_executable(example example.cpp)
set_target_properties(example PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON)
